test-suite/tests/roundtrip/invalid/syntax/malformed_line/04/input.essence
letting % A be 3

find b: int(1..20)

such that
  b < A
